assets/src/css/index.scss
@import 'variables';
@import 'functions/_';

* { box-sizing: border-box; }

html,body {
	background: #000;
	color: #222;
	font-family: 'Montserrat', sans-serif;
	font-size: 42px;
	line-height: 1.2;
	margin: 0;
	padding: 0;

	@media (max-width: $breakwidth-medium) {
		font-size: 34px;
	}
	@media (max-width: $breakwidth-small) {
		font-size: 28px;
	}

	&.admin-bar {
		padding-top: 32px;
	}
}
body {
	background: #f5f5f5;
	min-height: 100vh;
}

h1, h2, h3 {
	display: block;
	font-size: 2em;
	line-height: 1;
	margin: 0;
	padding: 0;
}
	h2 {
		font-size: 1.75em;

		.secondary & {
			font-size: 1.1em;
			line-height: 1.2;
		}
	}
	h3 {
		font-size: 1rem;
		font-weight: 200;
	}

p {
	margin-top: 0;
}

a {
	img {
		border: 0;
	}
	&:focus {
		outline: 0;
	}
}

nav.menu {
	ul, li {
		list-style: none;
		margin: 0;
		padding: 0;
	}
}

main {
	min-height: calc( 100vh - 4rem );
}

.post-edit-link {
	display: inline-block;
	background: #000;
	color: #fff;
	font-size: 1em;
	text-decoration: none;
	line-height: 1;
	padding: .5em .6em;
	margin: 0;

	&:hover {
		background: $colors-blue;
	}

	&:before {
		content: '✎ '
	}
}

.page {

	article.page {
		width: 70%;
		margin: 0 auto;

		> header {
			font-size: 0.8em;
		}
	}

	@import 'page-content';

	@include tablet {
		width: 100%;
	}

	.post-edit-link {
		color: #fff;
		position: fixed;
		bottom: 5%;
		left: 0;

		font-size: 0.4rem;

		&:hover {
			color: #fff;
		}
	}

}

.body {
	font-size: 0.5rem;
	line-height: 1.4;

	@include phone {
		font-size: 0.7rem;

		& > h2,
		& > h3 {
			text-align: center;
		}
	}
}

.tags {
	display: inline-block;
	font-size: 0.3em;
	line-height: 1;
	vertical-align: middle;

	h5 {
		display: inline-block;
		font-weight: 200;
		font-size: 1.2em;
		margin: 0 .5em 0 0;
	}

	ul, li {
		display: inline-block;
		list-style: none;
		margin: 0;
		padding: 0;
	}

	a {
		display: inline-block;
		background: $colors-purple;
		color: #fff;
		border-radius: 1em;
		padding: .5em .75em;
		margin: 0 .2em .2em 0;
		text-decoration: none;
		white-space: nowrap;

		&:hover {
			background: $colors-blue;
		}
	}
}

.error404 {

	text-align: center;

	h1 {
		font-size: 4em;
		margin-bottom: .25em;
	}

	.row-container {
		max-width: 700px;
		padding-left: 1em;
		padding-right: 1em;
	}
}

@import 'hacks';

@import 'stext/_';
@import 'masthead/_';
@import 'features/_';
@import 'rows/_';
@import 'footer/_';

@import 'cards/_';

@import 'podcasts/_';
@import 'press';

